[package]
name = "wifi"
version = "0.1.0"
authors = ["Tim Whitaker <camp4climber@gmail.com>"]
description = "Library for getting wifi information"

repository = "https://github.com/camp4climber/wifi"
homepage = "https://github.com/camp4climber/wifi"
license = "MIT"
readme = "README.md"

[dependencies]
