[package]
name = "wifi"
version = "0.1.0"
authors = ["Tim Whitaker <camp4climber@gmail.com>"]
description = "Library for getting wifi information"

repository = "https://github.com/archdaemon/wifi"
homepage = "https://github.com/archdaemon/wifi"
license = "MIT"
readme = "README.md"

[dependencies]
os = "0.1.0"
